# BatchRun/server.py
@@ -1,6 +1,6 @@
 from flask import Flask,jsonify,request, redirect,url_for
 from flask_cors import CORS
-from flask _restful import Api, Resource, reqparse
+from flask_restful import Api, Resource, reqparse
 from flask_swagger_ui import get_swaggerui_blueprint
 import run_service
 import logging
@@ -10,7 +10,7 @@ logging.basicConfig(filename ='logs/server.log' ,level=logging.INFO, format='%(a
 logger = logging.getLogger(__name__)
 
 app = Flask(__name__)
-CORS(app)
+CORS(app, resources={r"/api/*": {"origins": "*"}})
 api = Api(app)
 
 SWAGGER_URL = '/swagger'
@@ -34,9 +34,9 @@ class Run(Resource):
         """start a new run and return a runId"""
         parser = reqparse.RequestParser()
         parser.add_argument('type',type=str,required=True,help="Type of run that is Required")
-        parser.add_argument('cob_date', type=str,required=True,help="COB_DATE is Required"))        
-        parser.add_argument('run_group', type=str,required=True,help="Run group  is Required"))        
-        parser.add_argument('scenario', type=str,required=True,help="Scenario is Required"))        
+        parser.add_argument('cob_date', type=str,required=True,help="COB_DATE is Required")        
+        parser.add_argument('run_group', type=str,required=True,help="Run group  is Required")
+        parser.add_argument('scenario', type=str,required=True,help="Scenario is Required")      
         args = parser.parse_args()
 
         run_type = args['type']
@@ -45,25 +45,29 @@ class Run(Resource):
         scenario = args['scenario']
 
         logger.info(f"Strting new run: type={run_type}, cob_date={cob_date}, run_group={run_group}, scenario={scenario}")
-        run_service.start_run(run_type,cob_date,run_group,scenario)
+        runId = run_service.start_run(run_type,cob_date,run_group,scenario)
+        return jsonify({'runId': runId}), 201
+    
 
 
 # class to get run status 
 class RunStatus(Resource):
     """Get the status of a run given a runId"""
     def post(self,runId):
-        logger.info(f"fetching status for run_id={run_id}")
-        return run_service.get_run_status(run_id)
+        logger.info(f"fetching status for run_id={runId}")
+        status = run_service.get_run_status(runId)
+        return jsonify({'status':status}),200
 
 class KillRun(Resource):
     """Kill a run given a runiD"""
-    def post(self,run_id):
-        logger.info(f"Killing run_id={run_id}")
-        return run_service.kill_run(run_id)
+    def post(self,runId):
+        logger.info(f"Killing run_id={runId}")
+        run_service.kill_run(runId)
+        return jsonify({'message': 'run killed successfully'}),200
     
 api.add_resource(Run,'/run')
-api.add_resource(RunStatus,'/run/<string:run_id>/status')
-api.add_resource(KillRun, '/run/<string:run_id/kill')
+api.add_resource(RunStatus,'/run/<string:runId>/status')
+api.add_resource(KillRun, '/run/<string:runId>/kill')
 
 if __name__ == '__main__':
     run_service.initialize()
